# ESA-Charge

./: README.md  ethernet_comm_test.py  main.py
.github/workflows/: simulate.yml
firmware/: CMakeLists.txt  main.c  spi_driver.c  spi_driver.h  udp_server.c  udp_server.h
firmware/wiznet/ioLibrary/Ethernet/: socket.c  socket.h  w5500.c  w5500.h  wizchip_conf.c  wizchip_conf.h
sim/: __init__.py  ethernet_comm.py  network.py  node.py  protocol.py
workflows/.github/workflows/.github/workflows/.github/workflows/: simulate.yml
